--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mini-css-extract-plugin": "^1.6.0",
     "sortablejs": "^1.13.0",
     "style-loader": "^2.0.0",
+    "webfontloader": "^1.6.28",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
