--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "moment": "^2.29.1",
     "sortablejs": "^1.13.0",
     "style-loader": "^2.0.0",
     "webfontloader": "^1.6.28",
